Particle model and stuff

--- a/ws/src/magnetic_controller/CMakeLists.txt
+++ b/ws/src/magnetic_controller/CMakeLists.txt
@@ -17,7 +17,7 @@ find_package(catkin REQUIRED COMPONENTS
   interactive_markers
 )
 
-add_definitions(-std=c++11 -Wall -g)
+add_definitions(-std=c++11 -g)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -139,7 +139,7 @@ include_directories(
 # add_dependencies(magnetic_controller ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
-add_executable(magnetic_controller src/main.cpp src/Core.cpp src/ObjectBase.cpp)
+add_executable(magnetic_controller src/main.cpp src/Core.cpp)# src/ObjectBase.cpp src/MeshManager.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
