--- a/ws/src/magnetic_controller/package.xml
+++ b/ws/src/magnetic_controller/package.xml
@@ -48,6 +48,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>tf_conversions</build_depend>
   <build_depend>interactive_markers</build_depend>
+  <build_depend>knowrob_moveit</build_depend>
   
   <run_depend>geometry_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
@@ -57,6 +58,7 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>tf_conversions</run_depend>
   <run_depend>interactive_markers</run_depend>
+  <run_depend>knowrob_moveit</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
